--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,10 +1,13 @@
 .button {
   background-color: #fff;
   border: 1px solid #ccc;
+  border-radius: 50%;
   color: #333;
   cursor: pointer;
   display: inline-block;
   font-size: 14px;
   margin: 0 2px;
-  padding: 2px 5px;
+  padding: 2px 5px 4px;
+  text-align: center;
+  width: 12px;
 }
