--- a/src/components/Node/Node.css
+++ b/src/components/Node/Node.css
@@ -5,7 +5,7 @@
 }
 
 .node__item {
-  border: 1px solid #ddd;
+  border: 1px solid #eee;
   display: inline-block;
   margin: 1px 0;
   padding: 2px 1px 2px 10px;
